# ArctosRoboticArm_3Dprinted

./: README.md  cansend.py  control_arm2.py  control_arm_steps_position_abs.py  control_arm_steps_position_abs_angle.py  control_arm_steps_position_abs_angle_differential.py  control_arm_steps_to_home.py  helper_motor.py  ik.py
ROS2/: INSTALL.md  README.md  RUNNING.md  run.sh
ROS2/src/arctos_config/: CMakeLists.txt  package.xml
ROS2/src/arctos_config/config/: arctos_controllers.yaml  arctosgui_config.rviz  moveit.rviz
ROS2/src/arctos_config/launch/: demo.launch.py
ROS2/src/arctos_moveit/: CMakeLists.txt  package.xml  setup.py
ROS2/src/arctos_moveit/arctos_moveit/: interface.py
ROS2/src/arctos_moveit/src/: move_group_interface_coor_1.cpp  moveit_convert.cpp
ROS2/src/arctos_moveit_config/: CMakeLists.txt  package.xml
ROS2/src/arctos_moveit_config/config/: arctos.srdf  joint_limits.yaml  ompl_planning.yaml
ROS2/src/arctos_msgs/: CMakeLists.txt  package.xml
ROS2/src/arctos_msgs/msg/: JointState.msg
ROS2/src/arctos_urdf_description/: CMakeLists.txt  package.xml
ROS2/src/arctos_urdf_description/config/: display.rviz
ROS2/src/arctos_urdf_description/launch/: display.launch.py
ROS2/src/arctos_urdf_description/urdf/: arctos.urdf.xacro
ROS2/src/arctosgui/: README.md  rosjog.py  run.sh  ui.py  ui2.py
